add_library(tecio INTERFACE)

if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set_property(TARGET tecio PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/x64-gcc5.4/include)
    set_property(TARGET tecio PROPERTY INTERFACE_LINK_LIBRARIES ${CMAKE_CURRENT_LIST_DIR}/x64-gcc5.4/lib/libtecio.a)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set_property(TARGET tecio PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/x64-msvc141/include)
    set_property(TARGET tecio PROPERTY INTERFACE_LINK_LIBRARIES ${CMAKE_CURRENT_LIST_DIR}/x64-msvc141/lib/tecio.lib)
endif()
